Se le agrega animacion faltante a la galeria de imagenes y se continua con el armado de media query

--- a/index.html
+++ b/index.html
@@ -44,26 +44,66 @@
         <section class="peliculasTendencias" id="tendencias">
             <h2>Tendencias de hoy</h2>
             <div class="galeriaTendencias">
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/godzillaykong.jpg" alt="Godzilla y Kong - The New Empire" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/aquaman2.jpg" alt="Aquaman The lost Kingdom" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/blackphone.jpeg" alt="BlackPhone" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/oppenheimer.jpg" alt="Oppenheimer" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/comoelmar.jpg" alt="Como el mar" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/elplanetadelossimios2024.jpg" alt="El planeta de los simios" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/emayeljaguar.jpg" alt="Ema y el jaguar" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/haunt.jpg" alt="Haunt" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/lesenmascarada.jpg" alt="Les enmascarada" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/losojosdejulia.jpg" alt="Los ojos de Julia" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/madameweb.jpg" alt="Madame Web" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/valledesombras.jpg" alt="Valle de sombras" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/beekeeper.jpg" alt="Beekeeper" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/badlandhunters.jpg" alt="Badland Hunters" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/Backtoblack.jpeg" alt="Back to black" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/laextorsion.jpg" alt="La extorsion" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/themarvels.jpg" alt="The Marvels" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/expendables4.jpg" alt="Expendables 4" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/laprimeraprofecia.jpg" alt="La primera profecia" loading="lazy"></a></div>
-                <div><a href="./pages/detalle.html"><img src="./assets/img/tendencias/themaskedsaint.jpg" alt="The Masked Saint" loading="lazy"></a></div>
+                <div class="pelicula"><img src="./assets/img/tendencias/godzillaykong.jpg" alt="Godzilla y Kong - The New Empire" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Godzilla y Kong<br>The new Empire</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/aquaman2.jpg" alt="Aquaman The lost Kingdom" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Aquaman 2<br>The lost Kingdom</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/blackphone.jpeg" alt="BlackPhone" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Blackphone</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/oppenheimer.jpg" alt="Oppenheimer" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Oppenheimer</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/comoelmar.jpg" alt="Como el mar" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Como el mar</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/elplanetadelossimios2024.jpg" alt="El planeta de los simios" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">El planeta<br>de los<br>simios</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/emayeljaguar.jpg" alt="Ema y el jaguar" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Ema y el Jaguar</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/haunt.jpg" alt="Haunt" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Haunt</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/lesenmascarada.jpg" alt="Les enmascarada" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Les enmascarada</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/losojosdejulia.jpg" alt="Los ojos de Julia" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Los ojos de Julia</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/madameweb.jpg" alt="Madame Web" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Madame Web</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/valledesombras.jpg" alt="Valle de sombras" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Valle de sombras</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/beekeeper.jpg" alt="Beekeeper" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Beekeeper</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/badlandhunters.jpg" alt="Badland Hunters" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Badland<br>Hunters</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/Backtoblack.jpeg" alt="Back to black" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Back<br>to<br>Black</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/laextorsion.jpg" alt="La extorsion" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">La<br>extorsión</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/themarvels.jpg" alt="The Marvels" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">The<br>Marvels</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/expendables4.jpg" alt="Expendables 4" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">Expendables<br>4</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/laprimeraprofecia.jpg" alt="La primera profecia" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">La primera<br>profecia</a></div>
+                </div>
+                <div class="pelicula"><img src="./assets/img/tendencias/themaskedsaint.jpg" alt="The Masked Saint" loading="lazy">
+                    <div class="tendencia"><a href="./pages/detalle.html">The masked<br>Saint</a></div>
+                </div>
             </div>
             
         </section>
