--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -18,7 +18,7 @@
             <ul class="listNav">
                 <li><a href="../index.html#tendencias" class="linkNav">Tendencias</a></li>
                 <li><a href="./registrarse.html" class="linkNav">Registrarse</a></li>
-                <li><a href="#" class="linkNav btnInicioSesion">Iniciar Sesión</a></li>
+                <li><a href="./iniciarsesion.html" class="linkNav btnInicioSesion">Iniciar Sesión</a></li>
             </ul>
         </nav>
     </header>
